# talk-rustlondon21

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  openocd.gdb
.cargo/: config.toml
examples/: 03-routing.rs  allocator.rs
slides/: index.html  index.md
slides/css/: styles.css
