[package]
authors = ["Ockam <pi@ockam.io>"]
edition = "2018"
resolver = "2"
readme = "README.md"
name = "talk-rustlondon21"
version = "0.1.0"

[features]
default = ["std"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = [
    "ockam/default",
]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = [
    "ockam/no_std",
]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = [
    "ockam/alloc",
]

cortexm = [
    "alloc-cortex-m",
    "cortex-m",
    "cortex-m-rt",
    "cortex-m-semihosting",
    "panic-semihosting"
]

qemu = ["no_std", "alloc", "cortexm"]
atsame54 = ["no_std", "alloc", "cortexm", "atsame54_xpro"]
stm32f4 = ["no_std", "alloc", "cortexm", "stm32f4xx-hal"]

[dependencies]
#ockam = { git = "https://github.com/ockam-network/ockam.git", branch = "develop",
ockam = { version = "0.36", default_features = false, features = ["software_vault"] }

alloc-cortex-m = { version = "0.4.1", optional = true }
cortex-m = { version = "0.7.2", optional = true }
cortex-m-rt = { version = "0.6.14", optional = true }
cortex-m-semihosting = { version = "0.3.7", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }

atsame54_xpro = { version = "0.2.0", optional = true }
stm32f4xx-hal = { version = "0.9.0", features = ["rt", "stm32f407"], optional = true }

[target.'cfg(all(target_arch="wasm32",target_os="unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
incremental = false
lto = true
opt-level = "z"
codegen-units = 1
